New Database migration chain

--- a/BLAZAM/Pages/Install/Install.razor
+++ b/BLAZAM/Pages/Install/Install.razor
@@ -147,7 +147,7 @@
 
                                         //check permissions
                                         /*
-                                        PrivilegeLevel currentSettings = Context.PrivilegeLevel.FirstOrDefault();
+                                        PermissionDelegate currentSettings = Context.PermissionDelegate.FirstOrDefault();
                                         if (currentSettings != null)
                                         {
 
