--- a/BLAZAM/Shared/UI/Settings/Permissions/PriviligeLevelListItem.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/PriviligeLevelListItem.razor
@@ -62,7 +62,7 @@
 @code {
     IDirectoryModel Group;
     [Parameter]
-    public PrivilegeLevel Level { get; set; }
+    public PermissionDelegate Level { get; set; }
     [Parameter]
     public DatabaseContext Context { get; set; }
 
@@ -70,14 +70,22 @@
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        Group = Directory.Groups.FindGroupBySID(Level.GroupSID);
+        Group = Directory.Groups.FindGroupBySID(Level.DelegateSid);
     }
 
     bool collapse1Visible = false;
+
+    async Task DeletePermissionGroup()
+    {
+        Context.PermissionDelegate.Remove(Level);
+        await Context.SaveChangesAsync();
+        await NotificationService.Info("Permission Group removed.");
+
+    }
     private async void Save()
     {
         collapse1Visible = false;
-        Level.GroupSID = Group.SID;
+        Level.DelegateSid = Group.SID;
         await Context.SaveChangesAsync();
         await InvokeAsync(StateHasChanged);
     }
