--- a/BLAZAM/Shared/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAM/Shared/UI/Users/ChangeUserPasswordModalContent.razor
@@ -1,31 +1,31 @@
 ﻿@inherits AppModalContent
 <Div Background="Background.Light" TextColor="TextColor.Dark">
-    <Field Horizontal>
-        <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
+    <SettingsField>
+        <FieldLabel>
             @UserLocalization["Username"]
         </FieldLabel>
-        <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
+        <FieldBody>
             <TextEdit @bind-Text="@User.SamAccountName" Disabled=true />
 
         </FieldBody>
-    </Field>
+    </SettingsField>
 
-    <Field Horizontal>
-        <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
+    <SettingsField>
+        <FieldLabel>
             @UserLocalization["Email Address"]
         </FieldLabel>
-        <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
+        <FieldBody>
             <TextEdit @bind-Text="@User.Email" Disabled=true />
 
         </FieldBody>
-    </Field>
+    </SettingsField>
 
     <Validation Validator="ValidationRule.IsNotEmpty">
-        <Field Horizontal>
-            <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
+        <SettingsField>
+            <FieldLabel>
                 @UserLocalization["Password"]
             </FieldLabel>
-            <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
+            <FieldBody>
                 <TextEdit Role="TextRole.Password" @bind-Text="@newPassword">
                     <Feedback>
                         <ValidationError>Password cannot be blank</ValidationError>
@@ -33,14 +33,14 @@
                 </TextEdit>
 
             </FieldBody>
-        </Field>
+        </SettingsField>
     </Validation>
     <Validation Validator="@ValidateName">
-        <Field Horizontal>
-            <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
+        <SettingsField>
+            <FieldLabel>
                 @UserLocalization["Password"]
             </FieldLabel>
-            <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
+            <FieldBody>
                 <TextEdit Role="TextRole.Password" @bind-Text="@newPasswordConfirm">
                     <Feedback>
                         <ValidationError>Passwords must match</ValidationError>
@@ -48,14 +48,27 @@
                 </TextEdit>
 
             </FieldBody>
-        </Field>
+        </SettingsField>
     </Validation>
+    <SettingsField>
+        <FieldLabel>
+            @UserLocalization["Require change"]
+        </FieldLabel>
+        <FieldHelp>
+            Require the user to change their password at next logona
+        </FieldHelp>
+        <FieldBody>
+            <Switch TValue="bool" @ref=requireChangeSwitch/>
+
+        </FieldBody>
+
+    </SettingsField>
     <Button Color=Color.Primary Disabled=!PasswordsValid Clicked="SaveChanges">@UserLocalization["Change Password"]</Button>
 </Div>
 @code {
     string newPassword;
     string newPasswordConfirm;
-
+    Switch<bool> requireChangeSwitch;
 
     protected override async Task OnInitializedAsync()
     {
@@ -67,8 +80,10 @@
     async Task SaveChanges()
     {
         //User.CommitChanges();
-        if (User.SetPassword(newPassword.ToSecureString()))
+        if (User.SetPassword(newPassword.ToSecureString(), requireChangeSwitch.Checked))
         {
+           
+                
             await NotificationService.Success("Changed password for " + User.DisplayName, "Password Changed");
         }
         else
