Minor fixes for install wizard

--- a/BLAZAM/Shared/UI/Settings/ActiveDirectoryStatusPanel.razor
+++ b/BLAZAM/Shared/UI/Settings/ActiveDirectoryStatusPanel.razor
@@ -97,7 +97,7 @@
                             }
                             showProgress = Visibility.Invisible;
 
-                            DirectoryConnected.InvokeAsync();
+                            InvokeAsync(DirectoryConnected.InvokeAsync);
 
                         }
                         else
