--- a/BLAZAM/Pages/Install/Install.razor
+++ b/BLAZAM/Pages/Install/Install.razor
@@ -209,7 +209,7 @@
             }
             (await Context.AppSettings.FirstOrDefaultAsync()).InstallationCompleted = true;
             var result = await Context.SaveChangesAsync();
-            DatabaseCache.ApplicationSettings.InstallationCompleted = true;
+            //DatabaseCache.ApplicationSettings.InstallationCompleted = true;
             Program.InstallationCompleted = true;
             Nav.NavigateTo("/home", true);
         }
