--- a/BLAZAM/Shared/UI/Settings/AuthenticationSetting.razor
+++ b/BLAZAM/Shared/UI/Settings/AuthenticationSetting.razor
@@ -1,20 +1,18 @@
-﻿
-
-@inject IDbContextFactory<DatabaseContext> DbFactory
+﻿@inject IDbContextFactory<DatabaseContext> DbFactory
 @inherits ValidatedForm
 
 
 
 <LoadingIndicator Height="Height.Is100" Visible=LoadingData>
-        <Heading>@SettingsLocalization["Authentication Settings"]</Heading>
-        <Form @onsubmit=Save>
+    <Heading>@SettingsLocalization["Authentication Settings"]</Heading>
+    <Form @onsubmit=Save>
         <Validations Mode="ValidationMode.Auto" Model="@settings" StatusChanged="OnValidation">
-            
+
             <Validation Validator="AppValidationRule.IsNotEmpty">
-                <SettingsField >
+                <SettingsField>
                     <FieldLabel>@SettingsLocalization["Admin Password"]</FieldLabel>
                     <FieldBody>
-                        <TextEdit Role="TextRole.Password" @bind-Text="settings.AdminPassword">
+                        <TextEdit Role="TextRole.Password" @bind-Text="newAdminPassword">
                             <Feedback>
                                 <ValidationError />
                             </Feedback>
@@ -28,56 +26,56 @@
                     <FieldLabel>@SettingsLocalization["Session Timeout"]</FieldLabel>
                     <FieldHelp>Time in minutes</FieldHelp>
                     <FieldBody>
-                        <NumericPicker  TValue="int?" @bind-Value="@settings.SessionTimeout">
-                           
+                        <NumericPicker TValue="int?" @bind-Value="@settings.SessionTimeout">
+
                             <Feedback>
                                 <ValidationError />
                             </Feedback>
                         </NumericPicker>
-                       
+
 
                     </FieldBody>
                 </SettingsField>
             </Validation>
 
             <Text>Duo Security MFA (optional)</Text>
-                <hr/>
-                <Validation>
-                    <SettingsField>
-                        <FieldLabel>Duo ClientID</FieldLabel>
-                        <FieldBody>
-                            <TextEdit Role="TextRole.Password" @bind-Text="@settings.DuoClientId">
-                                <Feedback>
-                                    <ValidationError />
-                                </Feedback>
-                            </TextEdit>
-                        </FieldBody>
-                    </SettingsField>
-                </Validation>
-                <Validation>
-                    <SettingsField>
-                        <FieldLabel>Duo ClientSecret</FieldLabel>
-                        <FieldBody>
-                            <TextEdit Role="TextRole.Password" @bind-Text="@settings.DuoClientSecret">
-                                <Feedback>
-                                    <ValidationError />
-                                </Feedback>
-                            </TextEdit>
-                        </FieldBody>
-                    </SettingsField>
-                </Validation>
-                <Validation>
-                    <SettingsField>
-                        <FieldLabel>Duo ApiHost</FieldLabel>
-                        <FieldBody>
-                            <TextEdit Role="TextRole.Password" @bind-Text="@settings.DuoApiHost">
-                                <Feedback>
-                                    <ValidationError />
-                                </Feedback>
-                            </TextEdit>
-                        </FieldBody>
-                    </SettingsField>
-                </Validation>
+            <hr />
+            <Validation>
+                <SettingsField>
+                    <FieldLabel>Duo ClientID</FieldLabel>
+                    <FieldBody>
+                        <TextEdit Role="TextRole.Password" @bind-Text="@settings.DuoClientId">
+                            <Feedback>
+                                <ValidationError />
+                            </Feedback>
+                        </TextEdit>
+                    </FieldBody>
+                </SettingsField>
+            </Validation>
+            <Validation>
+                <SettingsField>
+                    <FieldLabel>Duo ClientSecret</FieldLabel>
+                    <FieldBody>
+                        <TextEdit Role="TextRole.Password" @bind-Text="@settings.DuoClientSecret">
+                            <Feedback>
+                                <ValidationError />
+                            </Feedback>
+                        </TextEdit>
+                    </FieldBody>
+                </SettingsField>
+            </Validation>
+            <Validation>
+                <SettingsField>
+                    <FieldLabel>Duo ApiHost</FieldLabel>
+                    <FieldBody>
+                        <TextEdit Role="TextRole.Password" @bind-Text="@settings.DuoApiHost">
+                            <Feedback>
+                                <ValidationError />
+                            </Feedback>
+                        </TextEdit>
+                    </FieldBody>
+                </SettingsField>
+            </Validation>
             <SettingsField>
                 <FieldBody>
                     <Button Disabled="saveDisabled" Type="ButtonType.Submit" Color="Color.Success">Save Changes</Button>
@@ -87,10 +85,11 @@
 
 
         </Validations>
-        </Form>
+    </Form>
 </LoadingIndicator>
 @code {
     AuthenticationSettings settings = new AuthenticationSettings();
+    string newAdminPassword;
     string adminPasswordInDb;
     string _timeoutString = "Loading...";
     protected override async Task OnInitializedAsync()
@@ -98,14 +97,14 @@
         LoadingData = true;
         await InvokeAsync(StateHasChanged);
 
-        Task.Run(() =>
-        {
-            settings = Context.AuthenticationSettings.FirstOrDefault();
-            _timeoutString = settings.SessionTimeout.ToString() + " Minutes";
-            adminPasswordInDb = settings?.AdminPassword;
-            LoadingData = false;
-            InvokeAsync(StateHasChanged);
-        });
+
+        settings = await Context.AuthenticationSettings.FirstOrDefaultAsync();
+        _timeoutString = settings.SessionTimeout.ToString() + " Minutes";
+        adminPasswordInDb = settings?.AdminPassword;
+        newAdminPassword = adminPasswordInDb;
+        LoadingData = false;
+        await InvokeAsync(StateHasChanged);
+
     }
     private void UpdateTimeoutDisplay()
     {
@@ -113,13 +112,18 @@
         InvokeAsync(StateHasChanged);
 
     }
-    protected override void Save()
+    protected override async void Save()
     {
-        if (!settings.AdminPassword.Equals(adminPasswordInDb))
+        if (!newAdminPassword.Equals(adminPasswordInDb))
         {
-            settings.AdminPassword = EncryptionService.EncryptObject(settings.AdminPassword);
+
+            settings.AdminPassword = EncryptionService.EncryptObject(newAdminPassword);
+
             adminPasswordInDb = settings.AdminPassword;
+
         }
         base.Save();
+        await InvokeAsync(StateHasChanged);
+
     }
 }
